# MixLoRA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-test.yml
misc/: code-formatter.sh  legacy_weights_convertor.py
mixlora/: __init__.py  adapter.py  config.py  lora_linear.py  model.py  prompter.py  utils.py
mlora/: feed_forward.py  mix_lora.py  modelargs.py  modeling_llama.py
tests/: generate.py  test__LlamaInputShape.py  test_llama.py  test_moe_layer.py  test_phi3.py
