[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mixlora"
version = "0.2.2"
description = "State-of-the-art Parameter-Efficient MoE Fine-tuning Method"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.43.0",
    "huggingface_hub",
]

[project.urls]
"Homepage" = "https://github.com/TUDB-Labs/MixLoRA"
"Bug Tracker" = "https://github.com/TUDB-Labs/MixLoRA/issues"

[tool.setuptools.packages.find]
include = ["mixlora*"]
